--- a/stashgifs/stash-tv.yml
+++ b/stashgifs/stash-tv.yml
@@ -1,6 +1,6 @@
-name: Stash TV
+name: StashGifs
 description: A TikTok-like vertical scroller interface for Stash. Forked from Stash Reels.
-url: https://github.com/secondfolder/stash-tv
+url: https://github.com/evolite/stashgifs
 version: 1.8.0
 ui:
   assets:
@@ -10,5 +10,5 @@ ui:
 settings:
   hideNavButton:
     displayName: Hide navigation button
-    description: Hide the main navigation link to Stash TV.
+    description: Hide the main navigation link to StashGifs.
     type: BOOLEAN
