--- a/stashgifs/stashgifs.yml
+++ b/stashgifs/stashgifs.yml
@@ -1,7 +1,7 @@
 name: StashGifs
 description: A GIF-style vertical scroller interface for Stash.
-url: https://anonymous.4open.science/r/stashgifs-D783
-version: 5.10.0
+url: https://github.com/evolite/stashgifs/edit/master/stashgifs/
+version: 5.9.0
 ui:
   assets:
     /: .
