--- a/index.yml
+++ b/index.yml
@@ -1,7 +1,7 @@
 - id: stashgifs
   name: StashGifs
   metadata:
-    description: A gif vertical scroller interface for Stash. Forked from Stash Reels.
+    description: Social Media style browsing experience
   version: 5.16.0
   date: "2026-01-03 13:58:04"
   path: https://github.com/evolite/stashgifs/releases/download/v5.16.0/stashgifs.zip
