--- a/stashgifs/stashgifs.yml
+++ b/stashgifs/stashgifs.yml
@@ -1,5 +1,5 @@
 name: StashGifs
-description: A GIF-style vertical scroller interface for Stash.
+description: Social Media style browsing experience
 url: https://github.com/evolite/stashgifs/edit/master/stashgifs/
 version: 5.16.0
 ui:
